// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="selected_unit "
        >
          <div
            aria-label="Achieved level L"
            class="level"
          >
            <h4>
              11 %
              <i
                style="padding-left: 0.2em;"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  style="color: rgb(227, 7, 19); font-size: 1.2rem;"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
                  />
                </svg>
              </i>
            </h4>
          </div>
          <div
            class="summary"
          >
            300 av 2775
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders beregnet_andel 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="selected_unit "
        >
          <div
            aria-label="Achieved level L"
            class="level"
          >
            <h4>
              11 %
              <i
                style="padding-left: 0.2em;"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  style="color: rgb(227, 7, 19); font-size: 1.2rem;"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
                  />
                </svg>
              </i>
            </h4>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
